# django-rest-framework

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
bookstore/: settings.py
